# GeofenceBeC

./: .gitignore  APACHE_PROXY_LETS_ENCRYPT.md  API.md  CMakeLists.txt  FindBson.cmake  FindMongoC.cmake  MONGO.md  README.md  database.c  database.h  fence_record.json  geofencebe.sh  location.c  location.h  log_record.json  main.c
